--- a/website/index.html
+++ b/website/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Item Manager</title>
+    <title>Email List</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Item Manager</h1>
+    <h1>Email List</h1>
 
     <!-- Form for adding new items (POST) -->
     <form id="add-item-form">
